--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,8 +20,10 @@ jobs:
           run: npm install  
         - name: Check style
           run: npm run eslint
-        - name: build
-          run: npm run build
+
+        - name: deploy
+          run: npm run deploy
+        
         - name: test
           run: npm run test
         - name: e2e tests
