--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cypress:open": "cypress open",
     "start:test": "NODE_ENV=test node index.js",
     "test:e2e": "cypress run",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "build": "rm -rf build && cd frontend && npm install && npm run build && cp -r build ../build"
   },
   "author": "Juho",
   "license": "MIT",
