--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,6 +20,8 @@ jobs:
           run: npm install  
         - name: Check style
           run: npm run eslint
+        - name: Build
+          run: npm build
 
         - name: deploy
           run: npm run deploy
