--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server -p3001 --watch db.json",
-    "build:ui": "rm -rf build && cd ../part2/puhelinluettelo/ && npm run build && cp -r build ../part3/backend",
+    "build:ui": "rm -rf build && cd ./frontend/ && npm install && npm run build && cp -r build ../build",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
