--- a/fly.toml
+++ b/fly.toml
@@ -1,39 +1,45 @@
-# fly.toml file generated for jjuhobackend on 2022-11-06T15:39:02+02:00
+# fly.toml app configuration file generated for blue-surf-3148 on 2023-10-12T12:11:34+03:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "jjuhobackend"
-kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
+app = "blue-surf-3148"
+primary_region = "arn"
 
-[env]
-PORT = "3001"
+[deploy]
+  release_command = "npm run build"
 
-[experimental]
-  allowed_public_ports = []
-  auto_rollback = true
+[processes]
+  app = "node app.js"
 
-[[services]]
-  http_checks = []
-  internal_port = 3001
+[build]
+  [build.args]
+    NODE_VERSION = "16.20.2"
+
+[http_service]
+  internal_port = 5000
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
   processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
 
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
+[checks]
+  [checks.alive]
+   type = "tcp"
+   interval = "15s"
+   timeout = "2s"
+   grace_period = "5s"
 
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    grace_period = "1s"
+  [checks.name_of_your_http_check]
+    grace_period = "30s"
     interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
+    method = "get"
+    path = "/health"
+    port = 5000
+    timeout = "10s"
+    type = "http"
+    [checks.name_of_your_http_check.headers]
+      Content-Type = "application/json"
+      Authorization = "super-secret"
+
