--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,8 +23,12 @@ jobs:
         - name: Build
           run: npm run build
 
-        - name: deploy
-          run: npm run deploy
+        - name: Deploy
+          uses: superfly/flyctl-actions/setup-flyctl@master
+          if: ${{ github.event_name == 'push' }}
+        - run: flyctl deploy --remote-only
+          env:
+            FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         
         - name: test
           run: npm run test
