--- a/fly.toml
+++ b/fly.toml
@@ -1,45 +1,42 @@
-# fly.toml app configuration file generated for blue-surf-3148 on 2023-10-12T12:11:34+03:00
+# fly.toml app configuration file generated for phoneci on 2023-10-24T14:54:09+03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "blue-surf-3148"
+app = "phoneci"
 primary_region = "arn"
+kill_signal = "SIGINT"
+kill_timeout = "5s"
 
-[deploy]
-  release_command = "npm run build"
-
-[processes]
-  app = "node app.js"
+[experimental]
+  auto_rollback = true
 
 [build]
-  [build.args]
+[build.args]
     NODE_VERSION = "16.20.2"
 
-[http_service]
+[env]
+  PORT = "3001"
+
+[[services]]
+  protocol = "tcp"
   internal_port = 3001
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
   processes = ["app"]
 
-[checks]
-  [checks.alive]
-   type = "tcp"
-   interval = "15s"
-   timeout = "2s"
-   grace_period = "5s"
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
 
-  [checks.name_of_your_http_check]
-    grace_period = "30s"
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
+  [services.concurrency]
+    type = "connections"
+    hard_limit = 25
+    soft_limit = 20
+
+  [[services.tcp_checks]]
     interval = "15s"
-    method = "get"
-    path = "/health"
-    port = 3001
-    timeout = "10s"
-    type = "http"
-    [checks.name_of_your_http_check.headers]
-      Content-Type = "application/json"
-      Authorization = "super-secret"
-
+    timeout = "2s"
+    grace_period = "1s"
