--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "start:test": "NODE_ENV=test node index.js",
     "test:e2e": "cypress run",
     "lint": "eslint . --fix",
-    "build": "rm -rf build && cd ./frontend/ && npm install && npm run build && cp -r build ../build"
-    
+    "build": "rm -rf build && cd ./frontend/ && npm install && npm run build && cp -r build ../build",
+    "start-prod": "node app.js"
   },
   "author": "Juho",
   "license": "MIT",
