--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         - name: Check style
           run: npm run eslint
         - name: build
-          run: npm run build
+          run: npm run build:ui
         - name: test
           run: npm run test
         - name: e2e tests
