--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,21 +37,21 @@ jobs:
           run: echo "$COMMITS"
 
         - name: Deployment success
-          uses: Ilshidur/action-discord@v1
+          uses: Ilshidur/action-discord@0.3.2
           if: success()
           with:
               severity: info
               details: Deployment onnistui
               webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
         - name: Deployment failure
-          uses: Ilshidur/action-discord@v1
+          uses: Ilshidur/action-discord@0.3.2
           if: failure()
           with:
               severity: error
               details: Deployment epäonnistui
               webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
         - name: Deployment cancelled
-          uses: Ilshidur/action-discord@v1
+          uses: Ilshidur/action-discord@0.3.2
           if: cancelled()
           with:
               severity: warn
