--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,6 +8,9 @@ on:
     branches: [master]
     types: [opened, synchronize]
 
+permissions:
+  contents: write
+
 jobs:
     simple_deployment_pipeline:
       runs-on: ubuntu-20.04
@@ -59,17 +62,17 @@ jobs:
               username: GitHub PR Notifier
       
     tag_release:
-      needs: [simple_deployment_pipeline]
-      runs-on: ubuntu-20.04
-      steps:
-        - uses: actions/checkout@v3
-        - name: Bump version and push tag
-          uses: anothrNick/github-tag-action@1.64.0
-          if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip')  }}
-          
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            DEFAULT_BUMP: patch
-            RELEASE_BRANCHES: master
-            WITH_V: true
+                needs: [simple_deployment_pipeline]
+                runs-on: ubuntu-latest
+                if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
+                steps:
+                  - uses: actions/checkout@v3
+                  - name: Bump version and push tag
+                    uses: anothrNick/github-tag-action@1.64.0
+                    env:
+                      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                      DEFAULT_BUMP: patch
+                      RELEASE_BRANCHES: master
+                      INITIAL_VERSION: 0.1.1
+                      WITH_V: true
         
